# to-do-api

./: .gitignore  README.md  pyproject.toml  schema.yml
to_do_api/: settings.py  urls.py
todo/: models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
todo/migrations/: 0001_initial.py
todo_item/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
todo_item/migrations/: 0001_initial.py  0002_alter_todoitem_title.py  0003_alter_todoitem_description_alter_todoitem_title.py  0004_alter_todoitem_description_alter_todoitem_owner_and_more.py  0005_alter_todoitem_description_alter_todoitem_owner.py  0006_alter_todoitem_description_alter_todoitem_owner.py  0007_alter_todoitem_description_alter_todoitem_owner_and_more.py
users/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
utils/: jwt.py
