[project]
name = "todo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "django-extensions>=4.1",
    "django-stubs>=6.0.4",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.17.0",
    "httpie>=3.2.4",
    "joserfc>=1.6.5",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]
